crates/analyzer/tests/snapshots/errors__invalid_block_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: Not a block field
  ┌─ compile_errors/invalid_block_field.fe:4:11
  │
4 │     block.foo
  │           ^^^
  │
  = Note: Only `coinbase`, `difficulty`, `number` and `timestamp` can be accessed on `block`.


